--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@
 
 .main {
   background-color: #f1f1f1;
+  height: 1195px;
+
 }
 .sidebar {
-  height: 1000px;
+  height: 1195px;
   background: white;
   border-radius: 10px;
   margin-top: 32px;
@@ -16,11 +18,15 @@
 .g {
   color: red;
   font-weight: 700;
+  text-align: left;
+  margin-left: 20px;
 }
 
 .f {
   color: green;
-  font-weight: 700;
+  font-weight: 600;
+  text-align: left;
+  margin-left: 20px;
 }
 
 .navlinks {
@@ -65,4 +71,13 @@
 .plogo {
   height: 200px;
   width: 200px;
+}
+
+
+.herocard{
+    height: 96px;
+    width: 96px;
+    background: white;
+    border-radius: 50%;
+    margin: 16px;
 }
